Fixed white space not wrapping

--- a/client/src/components/messages/message/Message.css
+++ b/client/src/components/messages/message/Message.css
@@ -3,8 +3,7 @@
   margin: 0;
   padding: 0.5rem 1rem;
   border-radius: 20px;
-  white-space: pre;
-  text-wrap: wrap;
+  white-space: pre-wrap;
 }
 
 .message__user {
